# Apollo14

./: .gitignore  CLAUDE.md  pyproject.toml
apollo14/: __init__.py  binning.py  combiner.py  geometry.py  interaction.py  jax_tracer.py  materials.py  merit.py  projector.py  ray.py  route.py  spectral.py  stage.py  surface.py  system.py  talos_route.py  talos_trace.py  trace.py  tracer.py  units.py  visualizer.py
apollo14/data/: agc_m074.csv
apollo14/data/projector/: PlayNitride_(-1-3)_APL05prc.csv
apollo14/elements/: __init__.py  aperture.py  boundary.py  glass_block.py  partial_mirror.py  planar.py  pupil.py  refracting_surface.py  surface.py
examples/: combiner_demo.py  jax_tracer_demo.py  optimize_eyebox.py  optimize_pupil.py  optimize_pupil_rgb.py  sequential_trace_demo.py
helios/: __init__.py  adam.py  combiner_params.py  eyebox.py  io.py  merit.py  photometry.py  pupil_merit.py
helios/reports/: __init__.py  composer.py  headline.py  primitives.py  pupil_coverage.py  pupil_report.py  run_report.py
helios/reports/figures/: eyebox_cdf.py  global_fov.py  mirrors.py  overview.py  per_cell.py  projector.py  visible_color.py
tests/: test_adam.py  test_combiner.py  test_combiner_params.py  test_elements.py  test_eyebox.py  test_geometry.py  test_helios.py  test_io.py  test_jax_tracer.py  test_merit.py  test_photometry.py  test_projector.py  test_pupil_merit.py  test_pupil_report.py  test_route.py  test_surface.py  test_talos.py  test_trace.py  test_tracer.py  test_tracer_equivalence.py
