[project]
name = "apollo14"
version = "0.1.0"
description = "JAX-native sequential ray tracer for AR combiner optimization"
requires-python = ">=3.14"
dependencies = [
    "jax[cpu]",
    "jaxlib",
    "plotly",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["apollo14", "helios"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
